# octreelib

./: .gitignore  DEVELOP.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  python-package.yml  test.yml
octreelib/grid/: __init__.py  grid.py  grid_base.py  grid_config.py  grid_config_base.py  grid_with_points.py  static_grid.py
octreelib/internal/: __init__.py  box.py  geometry.py  interfaces.py  point.py  typing.py  voxel.py
octreelib/octree/: __init__.py  base_octree.py  multi_pose_octree.py  octree.py  octree_base.py  octree_config.py  octree_config_base.py
octreelib/octree_manager/: __init__.py  multi_pose_manager.py  octree_manager.py
octreelib/ransac/: __init__.py  cuda_ransac.py  initial_points_config.py  util.py
octreelib/visualization/: __init__.py  views.py
octreelib/visualization/examples/: example.py
test/: __init__.py
test/grid/: __init__.py  test_cuda_ransac.py  test_grid.py  test_grid_with_points.py  test_static_grid.py
test/octree/: __init__.py  test_multi_pose.py  test_octree.py
