[tool.poetry]
name = "octreelib"
version = "0.0.0"
description = "Library for representing point clouds as OcTrees in SLAM"
authors = [
  "Kiselyov Mikhail <email@email.email>",
  "Pavel Mokeev <pav3l.mokeev@gmail.com>"
]
license = "APACHE"
readme = "README.md"
homepage = "https://github.com/prime-slam/"
repository = "https://github.com/prime-slam/octreelib"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = "^1.26.0"
k3d = "^2.16.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
